[package]
name = "dex"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dex-wvara-io.workspace = true
dex-factory-io.workspace = true
gstd.workspace = true
dex-io.workspace = true
gear-lib.workspace = true
sharded-fungible-token-io.workspace = true
fungible-token-io.workspace = true
primitive-types.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
gstd.workspace = true
gear-core.workspace = true
sp-core-hashing.workspace = true
tokio.workspace = true

# External binaries
dex-wvara.workspace = true
dex-factory.workspace = true
dex-state.workspace = true
dex-factory-state.workspace = true
dex-wvara-state.workspace = true
sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true
fungible-token.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
dex-io.workspace = true
