[package]
name = "dex-router"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
dex-factory-io.workspace = true
dex-io.workspace = true
dex-router-io.workspace = true
dex-wvara-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
dex-router-io.workspace = true
