[package]
name = "dex-test-transfer"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
dex-test-transfer-io.workspace = true
dex-wvara-io.workspace = true
fungible-token-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
dex-test-transfer-io.workspace = true
